--- a/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
+++ b/TTCNTT/TTCNTT/Views/Shared/_Layout.cshtml
@@ -27,6 +27,13 @@
     <link rel="stylesheet" href="~/Assets/css/responsive.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/Assets/css/custom.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="~/Assets/js/jquery.table2excel.min.js"></script>
@@ -50,7 +57,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-menu" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fa fa-bars"></i>
                     </button>
-                    <a class="navbar-brand" href="index.html"><img src="~/Assets/images/logo.png" class="logo" alt=""></a>
+                    @*<a class="navbar-brand" href="index.html"><img src="~/Assets/images/logo.png" class="logo" alt=""></a>*@
                 </div>
                 <!-- End Header Navigation -->
                 <!-- Collect the nav links, forms, and other content for toggling -->
